<resources>
    <string name="app_name">WES</string>

    <!-- New strings -->
    <string name="about_software">Acerca del software</string>
    <string name="security">Seguridad</string>
    <string name="language">Idioma</string>
    <string name="favorites">Favoritos</string>
    <string name="summary">Resumen</string>
    <string name="please_tens_parameter">Ajuste los parámetros</string>
    <string name="wes">Wireless Electrical Stimulator</string>
    <string name="copyright">Derechos Reservados</string>
    <string name="version">Versión 1.0</string>
    <string name="stimulator">Electro-Estimulador</string>
    <string name="electropedia">Electropedia</string>
    <string name="tens">TENS</string>
    <string name="bipolar">Bipolar</string>
    <string name="nmes">NMES</string>
    <string name="exit">Salir</string>
    <string name="start">Iniciar</string>
    <string name="logo_app">Logo app</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="wavelength">Longitud de onda</string>
    <string name="frequency">Frecuencia</string>

    <!-- Combo box channels -->
    <string-array name="channels_array">
        <item>Canales</item>
        <item>Independiente</item>
        <item>Simultaneo</item>
    </string-array>
    <string-array name="channels_array_nmes">
        <item>Canales</item>
        <item>Independiente</item>
        <item>Recifioco</item>
        <item>Simultaneo</item>
    </string-array>
</resources>
